# fk-zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.sqlx/: query-06cd72deccb08923d0ed5bcd3b0e850173102983b567759f7cab999275333694.json  query-1555c959c7a70775756f6daa5544aa41d33a14b52e340be2d752a12e2293d59d.json  query-2659d7bd5beaf1b7d2bbf1786238a504b730f962dae9b3f42bf90f8cef1c5417.json  query-2c8b34f0f156139fb8add0afaa8c0319c211dbf5d48660cd924bd1fba6024ef1.json  query-3066e348af03cb3229e14d5c85acbd6b6cf88354e517517bd46220474c73027e.json  query-316f8a91df8d052ef6a4a850271c1f6cba0414e841c6f89468ebdd31e5872923.json  query-3405e9f86520d7a2e1fcaefdbdde19aab84d7377d806de3e3a5ee463073a68d2.json  query-662b711b0d545b396d5718d9dff8088866936b9af7b683c44ced13b1dd0db20d.json  query-6b9b4d6417c72a25c9de5ab9d20c68e43098031c4f62c1d83056523f6286c626.json  query-76202f94fc79341602837d9d91a15467b594908a08efbfae4865f96105bd1fa6.json  query-819e7da5d478ac0a45ded75a93ece20143c2b42fee6b05448ab78d1dee3d1b6b.json  query-82190fb3d8d15829aba01ab85e386cf6eb2bcd1cb7d69c4778f7c5bc598e3b79.json  query-85971b0a5b43bdc485fb0947ead4f37e11cac7744e3c50c0a0f6b4a8dd6b53a3.json  query-b1327dc57b9ba6ce49cbd912c5546d519638c0de746499f2db2c6827eea6b3b1.json  query-b282dd8188b0a49492b2aa8e9a728ce388fe261544bc56a9f931053d7a0df137.json  query-b2a611c60f4eaf89a19ca8f690c7a1acac8e74290764fb63b4a33aca2178f93a.json  query-c6e058647fd065d02e4ee3e55e15cc4f1b502536ac5d3f52d2d1bd2f9d0631b0.json  query-c8556f79ec6c4674a359928b313e189b903f1195dc0faa588c129b65b498c038.json  query-cbbdd17160f732c4f8a414a8b25e93c7b6a5e0926af510e24a8962a66d7f8ab6.json  query-e4c5db276fafe3b4807e512b6000099fde74ea2979311aebb5b5707737f98d72.json  query-f792eda0098364305507807b18c458e63208cb32cc744c42d7cf4d61dc00cae9.json
configuration/: base.yaml  github.yaml  local.yaml  production.yaml
migrations/: 20231205205537_create_subscriptions_table.sql  20240311201024_add_status_to_subscriptions.sql  20240311201908_make_status_not_null_in_subscriptions.sql  20240311202327_create_subscription_tokens_table.sql  20240324155604_create_users_table.sql  20240324202102_rename_password_column.sql  20240324210144_add_salt_to_users.sql  20240324213627_removed_salt_from_users.sql  20240414165630_seed_user.sql  20240427204322_create_idempotency_table.sql  20240428121924_relax_null_checks_on_idempotency.sql  20240428193847_create_newsletter_issues_table.sql  20240428195111_create_issue_delivery_queue_table.sql  20240531191320_add_delivery_columns_to_newsletter_issues.sql  20240609133113_add_trey_columns_to_issue_delivery_queue.sql  20240626200553_replace_email_with_user_id_in_issue_delivery_queue.sql
scripts/: init_db.sh  init_redis.sh  init_secrets.sh
src/: app_error.rs  authentication.rs  configuration.rs  domain.rs  email_client.rs  error.rs  issue_delivery_worker.rs  lib.rs  main.rs  (+4 more)
(+67 files in other folders)
