[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Marc Blumentritt <flowerkick14@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
# [target.x86_64-pc-windows-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4"
config = "0.14.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
